budget overflow fixing

--- a/kingen/game.css
+++ b/kingen/game.css
@@ -88,6 +88,7 @@ body {
     padding: 1vw;
     gap: 1vw;
     height: calc(95% - 50px);
+    overflow-y: scroll;
 }
 
 .sidebar {
